// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aggregatePrice 1`] = `
Array [
  Array [
    "gemini",
    0,
    1535958600000,
    1535958681002,
  ],
  Array [
    "kraken",
    0,
    1535958600000,
    1535958681002,
  ],
  Array [
    "gdax",
    0,
    1535958600000,
    1535958681002,
  ],
  Array [
    "bitstamp",
    0,
    1535958600000,
    1535958681002,
  ],
]
`;

exports[`aggregatePrice 2`] = `
Array [
  Array [
    Object {
      "base": "USD",
      "close": 210,
      "high": 214,
      "low": 210,
      "open": 214,
      "period": 1,
      "quote": "ETH",
      "source": "gemini",
      "timestamp": 1535958600000,
      "volume": 0.0026,
    },
  ],
  Array [
    Object {
      "base": "USD",
      "close": 210,
      "high": 210,
      "low": 207,
      "open": 207,
      "period": 1,
      "quote": "ETH",
      "source": "kraken",
      "timestamp": 1535958660000,
      "volume": 35.3514,
    },
  ],
]
`;

exports[`commitPrice 1`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`commitPrice should wait 1`] = `
Array [
  Array [
    10000,
  ],
]
`;

exports[`commitPrice should wait 2`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1500000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`commitPrice, gasPrice 1`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1500000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`commitPrice, getTimeStamp throw 1`] = `
Array [
  Array [
    10000,
  ],
]
`;

exports[`commitPrice, getTimeStamp throw 2`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1500000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`commitPrice, getTimeStamp throw max time allowed 1`] = `
Array [
  Array [
    10000,
  ],
  Array [
    10000,
  ],
  Array [
    10000,
  ],
  Array [
    10000,
  ],
  Array [
    10000,
  ],
  Array [
    10000,
  ],
]
`;

exports[`commitPrice, getTimeStamp throw max time allowed 2`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1500000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`commitPrice, live 1`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 160000,
      "gasPrice": 1500000000,
    },
  ],
]
`;

exports[`fetchPrice 1`] = `
Array [
  Array [
    "account",
    Object {
      "gasLimit": 150000,
      "gasPrice": 1000000000,
      "nonce": 100,
    },
  ],
  Array [
    "account",
    Object {
      "gasLimit": 150000,
      "gasPrice": 1500000000,
      "nonce": 100,
    },
  ],
  Array [
    "account",
    Object {
      "gasLimit": 150000,
      "gasPrice": 1000000000,
      "nonce": 100,
    },
  ],
]
`;

exports[`fetchPrice gasPrice 1`] = `
Array [
  Array [
    "account",
    Object {
      "gasLimit": 150000,
      "gasPrice": 1000000000,
      "nonce": 100,
    },
  ],
]
`;

exports[`fetchPrice isLive 1`] = `
Array [
  Array [
    "account",
    Object {
      "gasLimit": 150000,
      "gasPrice": 1000000000,
      "nonce": 100,
    },
  ],
  Array [
    "account",
    Object {
      "gasLimit": 150000,
      "gasPrice": 1500000000,
      "nonce": 100,
    },
  ],
]
`;

exports[`getBasePeriod 1`] = `"invalid period"`;

exports[`getPeriodPrice 1 1`] = `
Object {
  "base": "USD",
  "close": 210,
  "high": 214,
  "low": 210,
  "open": 214,
  "period": 1,
  "quote": "ETH",
  "source": "gemini",
  "timestamp": 1535958600000,
  "volume": 0.0026,
}
`;

exports[`getPeriodPrice 1 2`] = `
Object {
  "base": "USD",
  "close": 210,
  "high": 210,
  "low": 202,
  "open": 202,
  "period": 1,
  "quote": "ETH",
  "source": "bitfinex",
  "timestamp": 1535958660000,
  "volume": 35.3528,
}
`;

exports[`getPeriodPrice 60 1`] = `
Object {
  "base": "USD",
  "close": 210,
  "high": 214,
  "low": 202,
  "open": 214,
  "period": 60,
  "quote": "ETH",
  "source": "gemini",
  "timestamp": 1535958000000,
  "volume": 35.3554,
}
`;

exports[`sortPricesByPairPeriod 1 1`] = `
Object {
  "ETH|USD": Object {
    "25599310": Array [
      Object {
        "base": "USD",
        "close": 214,
        "high": 214,
        "low": 214,
        "open": 214,
        "period": 0,
        "quote": "ETH",
        "source": "gemini",
        "timestamp": 1535958609000,
        "volume": 0.0013,
      },
      Object {
        "base": "USD",
        "close": 210,
        "high": 210,
        "low": 210,
        "open": 210,
        "period": 0,
        "quote": "ETH",
        "source": "gemini",
        "timestamp": 1535958609001,
        "volume": 0.0013,
      },
    ],
    "25599311": Array [
      Object {
        "base": "USD",
        "close": 202,
        "high": 202,
        "low": 202,
        "open": 202,
        "period": 0,
        "quote": "ETH",
        "source": "bitfinex",
        "timestamp": 1535958681000,
        "volume": 0.0007,
      },
      Object {
        "base": "USD",
        "close": 205,
        "high": 205,
        "low": 205,
        "open": 205,
        "period": 0,
        "quote": "ETH",
        "source": "bitfinex",
        "timestamp": 1535958681001,
        "volume": 0.0007,
      },
      Object {
        "base": "USD",
        "close": 207,
        "high": 207,
        "low": 207,
        "open": 207,
        "period": 0,
        "quote": "ETH",
        "source": "kraken",
        "timestamp": 1535958681000,
        "volume": 17.6757,
      },
      Object {
        "base": "USD",
        "close": 210,
        "high": 210,
        "low": 210,
        "open": 210,
        "period": 0,
        "quote": "ETH",
        "source": "kraken",
        "timestamp": 1535958681001,
        "volume": 17.6757,
      },
    ],
  },
}
`;

exports[`sortPricesByPairPeriod 60 1`] = `
Object {
  "ETH|USD": Object {
    "426655": Array [
      Object {
        "base": "USD",
        "close": 202,
        "high": 202,
        "low": 202,
        "open": 202,
        "period": 0,
        "quote": "ETH",
        "source": "bitfinex",
        "timestamp": 1535958681000,
        "volume": 0.0007,
      },
      Object {
        "base": "USD",
        "close": 205,
        "high": 205,
        "low": 205,
        "open": 205,
        "period": 0,
        "quote": "ETH",
        "source": "bitfinex",
        "timestamp": 1535958681001,
        "volume": 0.0007,
      },
      Object {
        "base": "USD",
        "close": 207,
        "high": 207,
        "low": 207,
        "open": 207,
        "period": 0,
        "quote": "ETH",
        "source": "kraken",
        "timestamp": 1535958681000,
        "volume": 17.6757,
      },
      Object {
        "base": "USD",
        "close": 210,
        "high": 210,
        "low": 210,
        "open": 210,
        "period": 0,
        "quote": "ETH",
        "source": "kraken",
        "timestamp": 1535958681001,
        "volume": 17.6757,
      },
      Object {
        "base": "USD",
        "close": 214,
        "high": 214,
        "low": 214,
        "open": 214,
        "period": 0,
        "quote": "ETH",
        "source": "gemini",
        "timestamp": 1535958609000,
        "volume": 0.0013,
      },
      Object {
        "base": "USD",
        "close": 210,
        "high": 210,
        "low": 210,
        "open": 210,
        "period": 0,
        "quote": "ETH",
        "source": "gemini",
        "timestamp": 1535958609001,
        "volume": 0.0013,
      },
    ],
  },
}
`;

exports[`startCommitPrices 1`] = `
Array [
  Array [
    Object {
      "rule": Object {
        "minute": 0,
      },
      "start": 1234567890000,
    },
    [Function],
  ],
]
`;

exports[`startCommitPrices 2`] = `
Array [
  Array [
    "account",
    Object {
      "address": "magiAddress",
      "commitPrice": [MockFunction] {
        "calls": Array [
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1500000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "getLastPrice": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
        ],
      },
      "isStarted": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": true,
          },
          Object {
            "type": "return",
            "value": true,
          },
        ],
      },
      "startMagi": [MockFunction] {
        "calls": Array [
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 120000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 120000,
              "gasPrice": 1000000000,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "web3Wrapper": Object {
        "getBlockTimestamp": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
            Array [],
            Array [],
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getGasPrice": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getTransactionCount": [MockFunction],
        "isLive": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": false,
            },
          ],
        },
      },
    },
    "ETH|USD",
    0,
  ],
]
`;

exports[`startCommitPrices not started 1`] = `
Array [
  Array [
    Object {
      "end": 1234571390000,
      "rule": Object {
        "minute": 0,
      },
      "start": 1234567890000,
    },
    [Function],
  ],
  Array [
    Object {
      "rule": Object {
        "minute": 0,
      },
      "start": 1234571440000,
    },
    [Function],
  ],
]
`;

exports[`startCommitPrices not started 2`] = `
Array [
  Array [
    "account",
    Object {
      "address": "magiAddress",
      "commitPrice": [MockFunction] {
        "calls": Array [
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1500000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "getLastPrice": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
        ],
      },
      "isStarted": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": false,
          },
        ],
      },
      "startMagi": [MockFunction] {
        "calls": Array [
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 120000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 120000,
              "gasPrice": 1000000000,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "web3Wrapper": Object {
        "getBlockTimestamp": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
            Array [],
            Array [],
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getGasPrice": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getTransactionCount": [MockFunction],
        "isLive": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": false,
            },
          ],
        },
      },
    },
    "ETH|USD",
    1000000000,
  ],
]
`;

exports[`startCommitPrices not started 3`] = `
Array [
  Array [
    "account",
    Object {
      "address": "magiAddress",
      "commitPrice": [MockFunction] {
        "calls": Array [
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1500000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 160000,
              "gasPrice": 1000000000,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "getLastPrice": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
          Object {
            "type": "return",
            "value": Object {
              "price": 100,
              "timestamp": 2234567890000,
            },
          },
        ],
      },
      "isStarted": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": false,
          },
        ],
      },
      "startMagi": [MockFunction] {
        "calls": Array [
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 120000,
              "gasPrice": 1000000000,
            },
          ],
          Array [
            "account",
            100,
            1234567890,
            Object {
              "gasLimit": 120000,
              "gasPrice": 1000000000,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "web3Wrapper": Object {
        "getBlockTimestamp": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
            Array [],
            Array [],
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getGasPrice": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getTransactionCount": [MockFunction],
        "isLive": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": false,
            },
          ],
        },
      },
    },
    "ETH|USD",
    1000000000,
  ],
]
`;

exports[`startMagi 1`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 120000,
      "gasPrice": 1000000000,
    },
  ],
]
`;

exports[`startMagi gasPrice 1`] = `
Array [
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 120000,
      "gasPrice": 1000000000,
    },
  ],
  Array [
    "account",
    100,
    1234567890,
    Object {
      "gasLimit": 120000,
      "gasPrice": 1000000000,
    },
  ],
]
`;
